# mcr-analyzer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .taplo.toml  LICENSE  README.rst  analyser.py  analyzer.py  cspell.config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/disabled-workflows/: build-and-release.yml  run-tests.yml
.github/workflows/: build-and-release.yml  ci.yml  pre-commit.yml  run-tests.yml
doc/: conf.py  index.rst
doc/modules/: database.rst  io.rst  processing.rst
docs/: conf.py  index.rst
docs/modules/: database.rst
mcr_analyser/: analyser.py  i18n.py
mcr_analyser/database/: database.py  models.py
mcr_analyser/io/: image.py  images.py  importer.py
mcr_analyser/processing/: measurement.py  spot.py  validator.py
mcr_analyser/ui/: exporter.py  graphics_scene.py  importer.py  mainwindow.py  measurement.py  models.py  welcome.py
mcr_analyser/utils/: __init__.py
mcr_analyzer/: analyzer.py  config.py  i18n.py  mcr_analyzer.py
mcr_analyzer/database/: database.py  models.py
mcr_analyzer/io/: image.py  importer.py
mcr_analyzer/processing/: measurement.py  spot.py  validator.py
mcr_analyzer/ui/: exporter.py  graphics_scene.py  importer.py  main_window.py  measurement.py  models.py  welcome.py
mcr_analyzer/utils/: __init__.py
src/mcr_analyzer/: __about__.py  __main__.py  config.py  mcr_analyzer.py
src/mcr_analyzer/config/: csv.py  database.py  exporter.py  hash.py  image.py  importer.py  netpbm.py  qt.py  spot.py  timezone.py
src/mcr_analyzer/database/: database.py  models.py
src/mcr_analyzer/io/: image.py  importer.py  mcr_rslt.py
src/mcr_analyzer/processing/: measurement.py  spot.py  validator.py
src/mcr_analyzer/ui/: exporter.py  graphics_items.py  graphics_scene.py  graphics_view.py  importer.py  main_window.py  measurement.py  models.py  welcome.py
src/mcr_analyzer/utils/: io.py  list.py  number.py  q_file_dialog.py  re.py  set.py
tests/: conftest.py  test_performance.py
tests/config/: test___image.py
tests/database/: test___database.py
tests/io/: image_test.py  test___image.py  test_image.py  test_images.py
tests/profile/: cli.sh  gui.sh
tests/ui/: test___main_window.py
tests/utils/: test___q_file_dialog.py  test___utils.py  test_utils.py  utils_test.py
