[metadata]
name = mcr-analyser
version = 0.1
author = Martin Knopp
author_email = Martin.Knopp@tum.de
description = Analyses and manages MCR measurements
long_description = file:README.rst
license_files =
	LICENSE
platforms = any
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
packages = find:
install_requires =
	numpy
	qtpy
	sqlalachmy

[options.extras_require]
tests =
	coverage
	flake8
	pylint
	pytest

[build_sphinx]
source-dir = doc
build-dir = doc/_build