[metadata]
name = mcr_analyzer
version = 0.1
description = Analyses and manages MCR measurements
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Knopp
author_email = Martin.Knopp@tum.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    PyQt6
    SQLAlchemy
    numpy
    pytz

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
tests =
    coverage
    flake8
    pylint
    pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
